--- a/tigamap/templates/tigamap/bcn_map.html
+++ b/tigamap/templates/tigamap/bcn_map.html
@@ -1,6 +1,7 @@
 {% extends "tigamap/validated_report_map_filterable.html" %}
 {% load staticfiles %}
-
+{% load i18n %}
+{% load leaflet_tags %}
 
 {% block map_options %}
 
