--- a/tigamap/templates/tigamap/bcn_map.html
+++ b/tigamap/templates/tigamap/bcn_map.html
@@ -7,19 +7,15 @@
 
     var southWest = L.latLng(41.195641, 1.360680),
     northEast = L.latLng(42.323299, 2.778270),
-    bounds = L.latLngBounds(southWest, northEast);
+    bounds = L.latLngBounds(southWest, northEast),
+    bounds_array = [[southWest.lat, southWest.lng],[northEast.lat, northEast.lng]];
 
  var djoptions = {"layers": [
                         ["OSM", "http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
                             "\u00a9 <a href=\"http://www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors"]
                     ],
                         "minimap": false, "scale": "metric", "center": [centerLat, centerLng], "tilesextent": [],
-                        "attributionprefix": null, "zoom": initialZoom, "maxzoom": 18, "minzoom": 0, "extent": [
-                            [-90,
-                                -180],
-                            [90,
-                                180]
-                        ], "resetview": true, "srid": null, "fitextent": true},
+                        "attributionprefix": null, "zoom": initialZoom, "maxzoom": 18, "minzoom": 0, "extent": bounds_array, "resetview": true, "srid": null, "fitextent": true},
                     options = {djoptions: djoptions, initfunc: loadmap,
                         globals: false, callback: window.map_init_basic, zoomControl: false, maxBounds: bounds};
 
