text for no reports in stack

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -300,7 +300,7 @@
                 </div>
 
             {% else %}
-                <p>There are no objects.</p>
+                <p>You do not yet have any reports in your stack. Click "Get more reports" to start validating.</p>
             {% endif %}
 
         </div>
