--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -176,11 +176,10 @@
 
                 <p>For each report: (1) select a category for your degree of belief that the report contains at least
                     one photo showing an adult tiger mosquito, (2) select a category for your degree of belief that the
-                    report contains at least one photo showing a tiger mosquito breeding site, (3) add any note you want
+                    report contains at least one photo showing a tiger mosquito breeding site, (4) add any internal notes for yourself or other experts regarding your reasons for each selection, (4) add any note you want
                     to see displayed on the public map along with the report (e.g. an edited version of the user's
-                    original note), (4) indicate if the photo should be hidden from public view (this will automatically
-                    remove it from the public map), and (5) add any internal notes you want. Click "Save" to save your
-                    responses on the server.</p>
+                    original note), (5) flag the report if you want to bring it to the attention of other experts (because it is an especially interesting report or because you have doubts), (6) indicate if the report should be hidden from public view (this will automatically
+                    remove it from the public map), and (7) select which (if any) of the reports photos should be displayed on the public map (only one photo will be displayed). You can save your work as you go using the "save" button at the top of the screen. When you are done with a given report, check the "validation complete" box.</p>
 
             </div>
         </div>
