--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -8,7 +8,7 @@
 
 {% block navbar_left_items %}
     <li>
-        <div class="btn-group" id="type_grp" data-toggle="buttons">
+        <div class="btn-group" id="type_grp" data-toggle="buttons" style="margin-right:5px;">
             <label class="btn btn-primary btn-sm navbar-btn" id="public_btn">
                 <input type="radio" name="options" autocomplete="off"> Public <span
                     class="badge">{{ n_public_pending }}</span></label>
