--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -107,16 +107,16 @@
                             {% endblock %}
                                 <li>
 
-                                    <div class="btn-group" id="type_grp" data-toggle="buttons">
-                                        <label class="btn btn-primary btn-sm navbar-btn" id="pending_btn">
-                                            <input type="radio" name="options" autocomplete="off"> Pending <span
+                                    <div class="btn-group" id="status_grp" data-toggle="buttons">
+                                        <label class="btn btn-info btn-sm navbar-btn" id="pending_btn">
+                                            <input type="radio" name="status" autocomplete="off"> Pending <span
                                                 class="badge">{{ n_pending }}</span></label>
-                                        <label class="btn btn-primary btn-sm navbar-btn" id="complete_btn">
-                                            <input type="radio" name="options" autocomplete="off"> Complete <span
+                                        <label class="btn btn-info btn-sm navbar-btn" id="complete_btn">
+                                            <input type="radio" name="status" autocomplete="off"> Complete <span
                                                 class="badge">{{ n_complete }}</span>
                                         </label>
-                                        <label class="btn btn-primary btn-sm navbar-btn" id="all_btn">
-                                            <input type="radio" name="options" autocomplete="off"> All <span
+                                        <label class="btn btn-info btn-sm navbar-btn" id="all_btn">
+                                            <input type="radio" name="status" autocomplete="off"> All <span
                                                 class="badge">{{ n_total }}</span>
                                         </label>
                                     </div>
