--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -612,7 +612,7 @@
 
     <script>
 
-        var pending_btn = $("#pendingc_btn"), complete_btn = $("#complete_btn"), all_btn = $("#all_btn");
+        var pending_btn = $("#pending_btn"), complete_btn = $("#complete_btn"), all_btn = $("#all_btn");
 
 
         if ("{{ pending }}" == "pending") {
